Sección acerca de intervalos

--- a/notas/referencias/book.bib
+++ b/notas/referencias/book.bib
@@ -91,3 +91,13 @@ year = "2001"
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
 } 
+@book{GelmanHill,
+  address = {New York},
+  author = {Gelman, Andrew and Hill, Jennifer},
+  publisher = {Cambridge University Press},
+  title = {Data analysis using regression and multilevel/hierarchical models},
+  volume = {Analytical methods for social research},
+  year = 2007
+}
+
+
