--- a/notas/02-regresion-lineal.Rmd
+++ b/notas/02-regresion-lineal.Rmd
@@ -1009,6 +1009,85 @@ En general, la recomendación es que las interpretaciones causales deben conside
 como preliminares (o *sugerencias*), y se requiere más análisis y consideraciones
 antes de poder tener interpretaciones causales sólidas. 
 
+## Predicción e incertidumbre
+
+En todos los casos de arriba, vimos cómo hacer predicciones puntuales para minimizar
+el error de predicción. Como función de pérdida utilizamos el error cuadrático. Esto
+resulta en un problema tratable que se puede optimizar de manera escalable.
+
+En problemas reales, sin embargo, rara vez estamos interesado en minimizar la
+pérdida cuadrática. Más bien queremos tomar una decisión más compleja en función
+de los datos. En esta situación, típicamente no es tan útil una predicción puntual, y
+quisiéramos saber qué tanta incertidumbre tenemos acerca de los posibles valores
+de $y$, para cada predicción individual. Esto es especialmente cierto cuando observamos
+que el error cuadrático tiene tamaño considerable.
+
+Por ejemplo: supongamos que estamos identificando clientes con valor alto (aquellos que
+predecimos que van a hacer compras grandes futuras) pues queremos diseñar una intervención
+para mejorar su satisfacción, mejorar su retención, o aumentar su valor de algún modo. Ahora 
+imaginemos que tenemos dos clientes, cuya predicción es
+igual a 10,000. Sin embargo, tenemos incertidumbre alta acerca del cliente A (podría ir de
+10 a 20 mil), mientras que para cliente B tenemos incertidumbre relativamente baja
+(por ejemplo, de 7 mil a 15 mil pesos). Si el tratamiento es costoso, puedes ser que
+preferamos tratar a B (si somos aversos al riesgo) en lugar de A.
+
+Otro ejemplo es si queremos hacer pronósticos de ventas 
+o inventarios para tiendas individuales de una cadena
+de supermercados. En este caso, es difícil hacer planeación y evaluar el riesgo
+si solo tenemos predictores puntuales, y quisiéramos saber qué otros escenarios son 
+consistentes con los datos, y cuánta incertidumbre tenemos en cada tienda individual. Aquí
+el error cuadrático es claramente insuficiente, pues el concepto de pérdidas y riesgos
+es mucho más complicado.
+
+En estos casos, es importante construir, en lugar de predicciones puntuales, **intervalos
+de predicción**. Hay muchos enfoques para construir estos intervalos: puedes estudiarlo
+en un curso estándar de regresión, regresión bayesiana (ve por ejemplo
+@GelmanHill), y también 
+existen métodos computacionales basados en simulación de aplicación más general.
+Siempre es mejor tener intervalos
+*construidos apropiadamente* que no tenerlos, pero tenemos que considerar que esto
+requiere más esfuerzo y recursos, en particular:
+
+- Costo computacional adicional considerable y/o
+- Recaer en supuestos teóricos y diagnósticos de modelos, y
+- Validación adicional de modelos
+
+En caso de producir intervalos, es importante de cualquier forma checar directamente
+que nuestros rangos de incertidumbre son apropiados (para lo cual también es útil
+muestras de prueba independientes del entrenamiento). Sin muestras de prueba, 
+puede ser muy difícil evaluar qué tan buenas son nuestras estimaciones de la incertidumbre.
+Casi todos los modelos tienen fallas en este sentido.
+
+Por otro lado, en algunas aplicaciones tener un error *promedio* razonable es suficiente,
+necesitamos tomar un número relativamente grande de decisiones,
+con costos relativamente uniformes (desde el punto de vista del negocio o de daños posibles)
+los estimadores puntuales pueden ser suficientes cuando el error de predicción
+es suficientemente bajo.  Siempre revisa los errores individuales con la muestra prueba, y
+considera si es necesario calcular y checar intervalos predictivos.
+
+
+#### Ejemplo {-}
+
+Para nuestro ejemplo de precios de casas, si queremos obtener intervalos de predicción
+razonables es necesario hacer ejercicios de modelación más delicados (como la gráfica indica,
+este modelo todavía requiere trabajo, ¿cómo podríamos mejorarlo?):
+
+```{r, message = FALSE}
+modelo_casas <- lm(precio_miles ~ habitable_100_m2 + calidad_m2 + GarageArea +
+                       BsmtFinSF1,
+                   data = casas_ent, weights = 1 / habitable_100_m2^2)
+preds_val <- predict(modelo_casas, newdata = casas_val, interval = "prediction",
+                     level = 0.95,
+                     weights = 1 / casas_val$habitable_100_m2^2)
+valida_g <- bind_cols(preds_val %>% as_tibble, casas_val %>% select(precio_miles))
+head(valida_g)
+ggplot(valida_g, aes(x = fit, ymin = lwr, ymax = upr)) +
+    geom_linerange(colour = "gray") +
+    geom_point(aes(y = precio_miles, x = fit), colour = "red")
+valida_g %>% mutate(cubre = precio_miles > lwr & precio_miles < upr) %>% 
+    summarise(cobertura = mean(cubre), ee = sqrt(mean(cubre)*mean(1-cubre)/n()))
+```
+
 
 ## ¿Por qué el modelo lineal funciona bien (muchas veces)?
 
